fix mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -355,4 +355,7 @@ h1, h2, h3, h4, h5 {
 .hero h2{
     font-size:1rem;
 }
+.navbar-brand{
+    font-size:0.75rem;
+}
 }
